// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RhelGraphCard Component should render a non-connected component: non-connected 1`] = `
<RhelGraphCard
  error={false}
  fulfilled={false}
  getGraphReports={[Function]}
  graphData={
    Object {
      "usage": Array [],
    }
  }
  pending={false}
  t={[Function]}
>
  <Card
    className="curiosity-usage-graph fadein"
  >
    <article
      className="pf-c-card curiosity-usage-graph fadein"
    >
      <CardHead>
        <div
          className="pf-c-card__head"
        >
          <h2>
            Daily CPU socket usage
          </h2>
          <CardActions>
            <div
              className="pf-c-card__actions"
            >
              <Dropdown
                className=""
                direction="down"
                dropdownItems={Array []}
                isGrouped={false}
                isOpen={false}
                isPlain={false}
                onSelect={[Function]}
                position="right"
                toggle={
                  <DropdownToggle
                    className=""
                    iconComponent={[Function]}
                    id=""
                    isActive={false}
                    isDisabled={true}
                    isFocused={false}
                    isHovered={false}
                    isOpen={false}
                    isPlain={false}
                    onToggle={[Function]}
                    parentRef={null}
                  >
                    Last 30 Days
                  </DropdownToggle>
                }
              >
                <DropdownWithContext
                  className=""
                  direction="down"
                  dropdownItems={Array []}
                  isGrouped={false}
                  isOpen={false}
                  isPlain={false}
                  onSelect={[Function]}
                  position="right"
                  toggle={
                    <DropdownToggle
                      className=""
                      iconComponent={[Function]}
                      id=""
                      isActive={false}
                      isDisabled={true}
                      isFocused={false}
                      isHovered={false}
                      isOpen={false}
                      isPlain={false}
                      onToggle={[Function]}
                      parentRef={null}
                    >
                      Last 30 Days
                    </DropdownToggle>
                  }
                >
                  <div
                    className="pf-c-dropdown"
                  >
                    <DropdownToggle
                      ariaHasPopup={null}
                      className=""
                      iconComponent={[Function]}
                      id="pf-toggle-id-0"
                      isActive={false}
                      isDisabled={true}
                      isFocused={false}
                      isHovered={false}
                      isOpen={false}
                      isPlain={false}
                      key=".0"
                      onEnter={[Function]}
                      onToggle={[Function]}
                      parentRef={null}
                    >
                      <Toggle
                        ariaHasPopup={null}
                        className=""
                        id="pf-toggle-id-0"
                        isActive={false}
                        isDisabled={true}
                        isFocused={false}
                        isHovered={false}
                        isOpen={false}
                        isPlain={false}
                        isSplitButton={false}
                        onEnter={[Function]}
                        onToggle={[Function]}
                        parentRef={null}
                        type={null}
                      >
                        <button
                          aria-expanded={false}
                          aria-haspopup={null}
                          className="pf-c-dropdown__toggle pf-m-disabled"
                          disabled={true}
                          id="pf-toggle-id-0"
                          onClick={[Function]}
                          onKeyDown={[Function]}
                          type="button"
                        >
                          <span
                            className="pf-c-dropdown__toggle-text"
                          >
                            Last 30 Days
                          </span>
                          <CaretDownIcon
                            className="pf-c-dropdown__toggle-icon"
                            color="currentColor"
                            noVerticalAlign={false}
                            size="sm"
                            title={null}
                          >
                            <svg
                              aria-hidden={true}
                              aria-labelledby={null}
                              className="pf-c-dropdown__toggle-icon"
                              fill="currentColor"
                              height="1em"
                              role="img"
                              style={
                                Object {
                                  "verticalAlign": "-0.125em",
                                }
                              }
                              viewBox="0 0 320 512"
                              width="1em"
                            >
                              <path
                                d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                                transform=""
                              />
                            </svg>
                          </CaretDownIcon>
                        </button>
                      </Toggle>
                    </DropdownToggle>
                  </div>
                </DropdownWithContext>
              </Dropdown>
            </div>
          </CardActions>
        </div>
      </CardHead>
    </article>
  </Card>
</RhelGraphCard>
`;

exports[`RhelGraphCard Component should render multiple states: error 1`] = `""`;

exports[`RhelGraphCard Component should render multiple states: fulfilled 1`] = `
<Card
  className="curiosity-usage-graph fadein"
>
  <CardHead>
    <h2>
      Daily CPU socket usage
    </h2>
    <CardActions>
      <Dropdown
        className=""
        direction="down"
        dropdownItems={Array []}
        isGrouped={false}
        isOpen={false}
        isPlain={false}
        onSelect={[Function]}
        position="right"
        toggle={
          <DropdownToggle
            className=""
            iconComponent={[Function]}
            id=""
            isActive={false}
            isDisabled={true}
            isFocused={false}
            isHovered={false}
            isOpen={false}
            isPlain={false}
            onToggle={[Function]}
            parentRef={null}
          >
            Last 30 Days
          </DropdownToggle>
        }
      />
    </CardActions>
  </CardHead>
  <CardBody>
    <div
      className="stack-chart-container"
    >
      <Chart
        domainPadding={
          Object {
            "x": Array [
              10,
              2,
            ],
            "y": Array [
              1,
              1,
            ],
          }
        }
        height={200}
      >
        <ChartStack>
          <ChartBar
            data={
              Array [
                Object {
                  "x": "May 25",
                  "y": 1,
                },
                Object {
                  "x": "May 26",
                  "y": 1,
                },
                Object {
                  "x": "May 27",
                  "y": 1,
                },
                Object {
                  "x": "May 28",
                  "y": 1,
                },
                Object {
                  "x": "May 29",
                  "y": 2,
                },
                Object {
                  "x": "May 30",
                  "y": 2,
                },
                Object {
                  "x": "May 31",
                  "y": 2,
                },
                Object {
                  "x": "Jun 1",
                  "y": 2,
                },
                Object {
                  "x": "Jun 2",
                  "y": 2,
                },
                Object {
                  "x": "Jun 3",
                  "y": 2,
                },
                Object {
                  "x": "Jun 4",
                  "y": 2,
                },
                Object {
                  "x": "Jun 5",
                  "y": 2,
                },
                Object {
                  "x": "Jun 6",
                  "y": 3,
                },
                Object {
                  "x": "Jun 7",
                  "y": 3,
                },
                Object {
                  "x": "Jun 8",
                  "y": 3,
                },
                Object {
                  "x": "Jun 9",
                  "y": 3,
                },
                Object {
                  "x": "Jun 10",
                  "y": 4,
                },
                Object {
                  "x": "Jun 11",
                  "y": 4,
                },
                Object {
                  "x": "Jun 12",
                  "y": 4,
                },
                Object {
                  "x": "Jun 13",
                  "y": 4,
                },
                Object {
                  "x": "Jun 14",
                  "y": 4,
                },
                Object {
                  "x": "Jun 15",
                  "y": 4,
                },
                Object {
                  "x": "Jun 16",
                  "y": 4,
                },
                Object {
                  "x": "Jun 17",
                  "y": 3,
                },
                Object {
                  "x": "Jun 18",
                  "y": 3,
                },
                Object {
                  "x": "Jun 19",
                  "y": 1,
                },
                Object {
                  "x": "Jun 20",
                  "y": 2,
                },
                Object {
                  "x": "Jun 21",
                  "y": 5,
                },
                Object {
                  "x": "Jun 22",
                  "y": 3,
                },
                Object {
                  "x": "Jun 23",
                  "y": 1,
                },
                Object {
                  "x": "Jun 24",
                  "y": 1,
                },
              ]
            }
          />
        </ChartStack>
      </Chart>
    </div>
  </CardBody>
</Card>
`;

exports[`RhelGraphCard Component should render multiple states: pending 1`] = `
<Card
  className="curiosity-usage-graph fadein"
>
  <CardHead>
    <h2>
      Daily CPU socket usage
    </h2>
    <CardActions>
      <Dropdown
        className=""
        direction="down"
        dropdownItems={Array []}
        isGrouped={false}
        isOpen={false}
        isPlain={false}
        onSelect={[Function]}
        position="right"
        toggle={
          <DropdownToggle
            className=""
            iconComponent={[Function]}
            id=""
            isActive={false}
            isDisabled={true}
            isFocused={false}
            isHovered={false}
            isOpen={false}
            isPlain={false}
            onToggle={[Function]}
            parentRef={null}
          >
            Last 30 Days
          </DropdownToggle>
        }
      />
    </CardActions>
  </CardHead>
  <CardBody>
    <div
      className="stack-chart-container"
    >
      <small>
        Loading...
      </small>
    </div>
  </CardBody>
</Card>
`;
